Minor update to page title

--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 ---
 layout: default
-title: "Hello world!"
 ---
 
-<script src="/assets/js/script.js"></script>
+<script src="{{ '/assets/js/script.js' | relative_url }}"></script>
 
 <div class='container'>
 	<h1>Colour AI</h1>
