--- a/index.html
+++ b/index.html
@@ -4,17 +4,26 @@ layout: default
 
 <script src="{{ '/assets/js/script.js' | relative_url }}"></script>
 
-<div class='container'>
+<div class='page-container'>
 	<h1>Colour AI</h1>
 	<p>Choose one of the colours (in your mind!) and have the AI guess it</p>
 
 	<div style="display: block;">
-		<div class='colour-box' id="box-0"></div>
-		<div class='colour-box' id="box-1"></div>
-		<div class='colour-box' id="box-2"></div>
+		<div class="outer-box" id="box-0-outer">
+			<div class='colour-box' id="box-0"></div>
+		</div>
+		<div class="outer-box" id="box-1-outer">
+			<div class='colour-box' id="box-1"></div>
+		</div>
+		<div class="outer-box" id="box-2-outer">
+			<div class='colour-box' id="box-2"></div>
+		</div>
+		<span class="next-button" onclick="nextClicked()">&#x21bb;</span>
 	</div>
 	
 	<div>
 		<input type="text" id="user-input" name="user-input" size=50 onkeypress="checkEnter(event)">
 	</div>
+	
+	<div class="border-container"></div>
 </div>
