--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ layout: default
 ---
 
 <script src="{{ '/assets/js/script.js' | relative_url }}"></script>
+<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
 
 <div class='page-container'>
 	<h1>Colour AI</h1>
@@ -22,8 +23,6 @@ layout: default
 	</div>
 	
 	<div>
-		<input type="text" id="user-input" name="user-input" size=50 onkeypress="checkEnter(event)">
+		<input class="input-textbox" type="text" id="user-input" name="user-input" size=50 onkeypress="checkEnter(event)">
 	</div>
-	
-	<div class="border-container"></div>
 </div>
