--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 layout: default
 ---
 
-<script src="{{ '/assets/js/script.js' | relative_url }}"></script>
+<script src="https://unpkg.com/mathjs/lib/browser/math.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
+<script src="{{ '/assets/js/script.js' | relative_url }}"></script>
 
 <div class='page-container'>
 	<h1>Colour AI</h1>
