--- a/index.html
+++ b/index.html
@@ -2,10 +2,8 @@
 layout: default
 ---
 
-<script>var colourVocab = {{ site.data.vocab | jsonify }};</script>
 <script src="https://unpkg.com/mathjs/lib/browser/math.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
-<script src="{{ '/assets/js/colour-model.js' | relative_url }}"></script>
 <script src="{{ '/assets/js/script.js' | relative_url }}"></script>
 
 <div class='page-container'>
@@ -26,6 +24,6 @@ layout: default
 	</div>
 	
 	<div>
-		<input class="input-textbox" type="text" id="user-input" name="user-input" size=50 onkeypress="checkEnter(event)">
+		<input class="input-textbox" type="text" id="user-input" name="user-input" size=50 maxlength="100" onkeypress="checkEnter(event)">
 	</div>
 </div>
