--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
 
 <div class='page-container'>
 	<h1>Colour AI</h1>
-	<p>Choose one of the colours (in your mind!) and have the AI guess it</p>
+	<p>Choose one of the colours (in your mind!) and describe it to the AI in the textbox below</p>
 
 	<div style="display: block;">
 		<div class="outer-box" id="box-0-outer">
